# LibraryManagementSystem

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: ci.yml
api/: app_state.py  books.py  users.py
cli/: interface.py
data/: books.json  data_loader_json.py  database_manager.py  database_state.py  ebooks.json  init_db.py  library.db  library_state.py  migrate_books.py  migrate_borrowings.py  migrate_users.py  migrate_waitlist.py  schema.sql  state.py  users.json
data/db/: library.db  schema.sql
data/json/: books.json
exceptions/: base.py  book_exceptions.py  library_exceptions.py  loan_exceptions.py  user_exceptions.py
repositories/: book_repository.py  borrowing_repository.py  user_repository.py  waitlist_repository.py
tests/: conftest.py  test_library.py  test_library_system.py  test_library_unit.py
tests/library_database/: conftest.py  test_book_repository.py  test_borrowing_repository.py  test_library_system.py  test_user_repository.py
tests/library_objects/: conftest.py  test_library_system.py  test_library_unit.py
utils/: data_loader.py  migrate_books.py  migrate_users.py  uid.py
