[project]
name = "library-management-system"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "Jinja2>=3.1.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
]